Edit navbar links Edit navbar links to reflect new section titles Change id of sections so that anchors work

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -7,9 +7,9 @@
   </div>
 
   <div class="navbar__options" data-navbar-target="navbarLinks" data-action="resize@window->navbar#navbarToggle">
-    <p> <%= link_to "How it Works", root_path(anchor: 'how-it-works') %></p>
-    <p> <%= link_to "Farmers", root_path(anchor: 'farmers-and-contractors') %></p>
-    <p> <%= link_to "Agri Contractors & Farm Workers", root_path(anchor: 'farmers-and-contractors') %></p>
+    <p> <%= link_to "Our Solution", root_path(anchor: 'our-solution') %></p>
+    <p> <%= link_to "Benefits Of Joining", root_path(anchor: 'benefits-of-joining') %></p>
+    <p> <%= link_to "How It Works", root_path(anchor: 'how-it-works') %></p>
   </div>
 
   <button class="burger-button" data-navbar-target="burgerButton" data-action="click->navbar#menuToggle">
@@ -33,7 +33,7 @@
 </div>
 
 
-<main data-controller="section">
+<main data-controller="section" id="our-solution">
   <div class="why-us">
     <div class="why-us__header">
       <h2 class="title section__title section__title--green">OUR SOLUTION</h2>
@@ -77,7 +77,7 @@
     </div>
   </div>
 
-  <section class="why-sign-up why-and-how" data-section-target="sectionBackground" id="farmers-and-contractors">
+  <section class="why-sign-up why-and-how" data-section-target="sectionBackground" id="benefits-of-joining">
     <div class="why-sign-up__header why-and-how-header">
       <h2 class="title section__title">BENEFITS OF JOINING</h2>
       <div class="category-buttons">
