Add footer Add footer with GDPR LINK and Farm Match copyright Styled using navbar class with minor tweaks in components/footer.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "components/flash";
 @import "components/form";
 @import "components/separators";
+@import "components/footer";
 
 // Layouts
 @import "layouts/container";
