--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -305,8 +305,9 @@
     </div>
 
   </section>
-
-  <div class="gdpr-link">
-    <%= link_to "gdpr notice", gdpr_path %>
-  </div>
 </main>
+
+<footer class="navbar footer">
+  <p>&copy; Farm Match 2024 </p>
+  <p><%= link_to "GDPR NOTICE", gdpr_path %></p>
+</footer>
