changed copy of our solution section

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -46,24 +46,20 @@
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
           Irish farms have seen a 29% cost increase since 2022, forcing farmers
-          to lower Agri contracting expenses for profitability.
+          to lower costs.
         </p>
       </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
           Climate change is causing operational disruptions and tighter
-          timeframes, highlighting the need for dependable Agri Contractors to
-          meet deadlines.
+          timeframes.
         </p>
       </div>
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Chronic labour shortages persist in the Irish agricultural sector,
-          exacerbated by an ageing farmer population and declining family
-          involvement. Finding farm workers remains a challenge.
-        </p>
+          Chronic labour shortages persist in the Irish agricultural sector.        </p>
       </div>
       <div class="why-us__body--title">
         <h4>How Farm Match Helps</h4>
@@ -71,7 +67,7 @@
       <div>
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
-          Farm Match offers a solution to optimize Agri contracting costs and
+          We offer a solution to optimize Agri contracting costs and
           address labour shortages directly.
         </p>
       </div>
@@ -86,7 +82,7 @@
         <i class="fa-regular fa-hand-point-right"></i>
         <p>
           Farm Match matches tasks with interested contractors and workers in
-          the area, providing farmers with greater choice and flexibility.
+          your area.
         </p>
       </div>
     </div>
