--- a/app/views/potential_users/_new.html.erb
+++ b/app/views/potential_users/_new.html.erb
@@ -8,6 +8,15 @@
   <%= f.input :terms_of_service, as: :boolean,
                                  label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
                                  label_html: { class: "form-gdpr-consent"} %>
+
+
+  <% PotentialUser::TASKS.each do |category, tasks| %>
+    <h3><%= category %></h3>
+    <% tasks.each do |task| %>
+      <%= f.input :tasks, as: :check_boxes, label: task, collection: { task => task } %>
+    <% end %>
+  <% end %>
+
   <div class="form-submit">
     <%= f.submit 'Submit', class: "btn btn--primary" %>
   </div>
