Add tasks field to new potential user form Remove CATEGORIES and SUBCATEGORIES from potential user model Add TASKS to potential user model. TASKS is an array of all task subcategories Render collection TASKS as check boxes in the form Style section so that section label is rendered as title but options are text font

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -65,6 +65,8 @@
     font-weight: 100;
   }
 
+
+
   .form-submit {
     display: flex;
     align-self: center;
@@ -81,4 +83,25 @@
   #potential_user_terms_of_service {
     margin-right: 0.5rem;
   }
+}
+
+
+.checkbox-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.75rem;
+
+  .checkbox label {
+    color: var(--color-text-muted);
+    font-family: var(--font-family-lato);
+    font-weight: bold;
+  }
+
+  input {
+    margin-right: var(--space-xxs);
+    margin-left: var(--space-s);
+  }
+}
+.checkbox-container > label {
+  margin-bottom: 0.25rem;
 }
