--- a/app/views/potential_users/_new.html.erb
+++ b/app/views/potential_users/_new.html.erb
@@ -5,17 +5,15 @@
   <%= f.input :email, input_html: { class: "form-field" } %>
   <%= f.input :role, collection: PotentialUser::ROLES, prompt: "- Select -", input_html: { class: "form-field" } %>
   <%= f.input :county, collection: PotentialUser::COUNTIES, prompt: "- Select -", input_html: { class: "form-field"} %>
-  <%= f.input :terms_of_service, as: :boolean,
-                                 label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
-                                 label_html: { class: "form-gdpr-consent"} %>
 
+  <%= f.input :tasks, as: :check_boxes,
+                      collection: PotentialUser::TASKS,
+                      include_hidden: false,
+                      label: "What tasks are you interested in performing?",
+                      wrapper_html: { class: "checkbox-container"} %>
 
-  <% PotentialUser::TASKS.each do |category, tasks| %>
-    <h3><%= category %></h3>
-    <% tasks.each do |task| %>
-      <%= f.input :tasks, as: :check_boxes, label: task, collection: { task => task } %>
-    <% end %>
-  <% end %>
+  <%= f.input :terms_of_service, as: :boolean, label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
+                                               label_html: { class: "form-gdpr-consent"} %>
 
   <div class="form-submit">
     <%= f.submit 'Submit', class: "btn btn--primary" %>
