--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -73,9 +73,22 @@
     justify-content: center;
   }
 
+
+.form-gdpr-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
   .form-gdpr-consent {
     font-size: var(--font-size-s);
+    font-family: var(--font-family-lato);
+    color: var(--color-text-muted);
+    text-align: justify;
+    text-justify: auto;
+    max-width: 95%;
   }
+
   .potential_user_terms_of_service {
     margin-top: .25rem;
     margin-bottom: .75rem;}
@@ -85,6 +98,23 @@
   }
 }
 
+.task-list {
+  margin-left: 1rem;
+
+  h4 {
+    font-size: 16px;
+    color: var(--color-primary);
+    margin-top: .25rem;
+    margin-bottom: .25rem;
+  }
+}
+
+.task-list-title {
+  margin-bottom: .5rem;
+  margin-top: 1rem;
+  font-size: 16px;
+  color: var(--color-primary);
+}
 
 .checkbox-container {
   display: flex;
