--- a/app/views/potential_users/_potential_user.html.erb
+++ b/app/views/potential_users/_potential_user.html.erb
@@ -1,7 +1,7 @@
 
 <div class="user-card">
   <div class="user-card__header">
-    <h4><%= "#{potential_user.name} #{potential_user.surname}" %></h4>
+    <h4><%= "#{potential_user.first_name} #{potential_user.surname}" %></h4>
   </div>
   <p><%= potential_user.email %></p>
   <p><%= potential_user.role %></p>
