--- a/app/views/potential_users/_new.html.erb
+++ b/app/views/potential_users/_new.html.erb
@@ -11,19 +11,22 @@
     <div class="task-list">
       <% PotentialUser::TASKS.each do |category, tasks| %>
         <h4><%= category %></h4>
-        <%= f.input :tasks, as: :check_boxes,
-                            label: false,
-                            collection: tasks,
-                            wrapper_html: {class: "checkbox-container"},
-                            include_hidden: false %>
+        <%= f.input :tasks,
+                    as: :check_boxes,
+                    label: false,
+                    collection: tasks,
+                    wrapper_html: {class: "checkbox-container"},
+                    include_hidden: false %>
       <% end %>
     </div>
   </div>
 
   <div>
-    <%= f.input :terms_of_service, as: :boolean, label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
-                                                 wrapper_html: { class: "form-gdpr-container"},
-                                                 label_html: { class: "form-gdpr-consent"} %>
+    <%= f.input :terms_of_service,
+                as: :boolean,
+                label: sanitize("I have read and agree to the #{link_to "GDPR notice", gdpr_path}, and I consent to the collection and use of my personal data as described therein."),
+                wrapper_html: { class: "form-gdpr-container"},
+                label_html: { class: "form-gdpr-consent"} %>
   </div>
   <div class="form-submit">
     <%= f.submit 'Submit', class: "btn btn--primary" %>
