Add table to potential_users index page Add table to view so that data is well displayed and can be copy-pasted easily

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,13 +1,19 @@
 
-.card-container {
-
+.table-container {
+  padding-right: var(--space-m);
+  padding-left: var(--space-m);
 }
 
-.user-card {
-  margin: var(--space-m) 0 var(--space-m) 0;
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  .user-card__header {
-    display: flex;
-    flex-direction: row;
-  }
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
 }
