added extra top margin to How Farm match Helps title

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -134,6 +134,10 @@
     justify-content: center;
   }
 
+  .how-farm-match-helps {
+    margin-top: 1rem;
+  }
+
   p {
     text-align: start;
     margin-left: 1rem;
