--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -61,7 +61,7 @@
         <p>
           Chronic labour shortages persist in the Irish agricultural sector.        </p>
       </div>
-      <div class="why-us__body--title">
+      <div class="why-us__body--title how-farm-match-helps">
         <h4>How Farm Match Helps</h4>
       </div>
       <div>
@@ -114,7 +114,6 @@
       </div>
     </div>
 
-    <%# REASONS FOR FARMERS (can be switched with REASONS FOR CONTRACTORS) %>
     <div id="why-farmers" data-section-target="whyFarmersSection">
       <div class="reasons">
         <div class="reason-card reason-card--farmers">
