--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -22,20 +22,28 @@
     background-color: var(--color-primary);
 
     &:hover,
-    // &:focus,
-    // &:focus-within,
     &:active {
       color: var(--color-white);
       filter: saturate(1.4) brightness(115%);
     }
   }
 
+  &--selected {
+    border-color: var(--color-tertiary);
+    box-shadow: 0 0 0 0.25rem #f1e691;
+    font-weight: bolder;
+    background-color: var(--color-background);
+  }
+
   &--flip {
     color: var(--color-black);
     background-color: var(--color-background);
+    box-shadow: none;
+    font-weight: 400;
+    border: 1px solid rgb(194, 194, 194);
 
     &:hover {
-      font-weight: bold;
+      background-color: #f0e27c;
     }
   }
 
