--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -60,7 +60,7 @@
 }
 
 .section__title {
-  font-size: 3.5rem;
+  font-size: 3rem;
 }
 
 .section__title--green {
@@ -158,12 +158,11 @@
 
 .category-buttons {
   display: flex;
-  flex-direction: column;
   align-items: center;
   margin-top: var(--space-m);
 
   button:nth-of-type(1) {
-    margin-bottom: var(--space-xxxs);
+    margin-right: var(--space-xxs);
   }
 }
 
