--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -36,7 +36,7 @@
 <main data-controller="section" id="our-solution">
   <div class="why-us">
     <div class="why-us__header">
-      <h2 class="title section__title section__title--green">OUR SOLUTION</h2>
+      <h2 class="section__title">OUR SOLUTION</h2>
     </div>
     <div class="why-us__body">
       <div class="why-us__body--title">
@@ -101,10 +101,10 @@
 
   <section class="why-sign-up why-and-how" data-section-target="sectionBackground" id="benefits-of-joining">
     <div class="why-sign-up__header why-and-how-header">
-      <h2 class="title section__title">BENEFITS OF JOINING</h2>
+      <h2 class="section__title">BENEFITS OF JOINING</h2>
       <div class="category-buttons">
         <button data-category="farmers"
-                class="btn btn--tertiary"
+                class="btn btn--selected"
                 data-section-target="farmersButton"
                 data-action="click->section#selectSection">FARMERS</button>
         <button data-category="contractors"
@@ -205,11 +205,11 @@
 
   <section class="how-it-works container why-and-how">
     <div class="how-it-works__header why-and-how-header" id="how-it-works">
-      <h2 class="title section__title section__title--green">HOW IT WORKS</h2>
+      <h2 class="section__title">HOW IT WORKS</h2>
 
       <div class="category-buttons">
         <button data-category="farmers"
-                class="btn btn--tertiary"
+                class="btn btn--selected"
                 data-section-target="farmersButton"
                 data-action="click->section#selectSection">FARMERS</button>
         <button data-category="contractors"
