--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -28,25 +28,6 @@
     }
   }
 
-  &--selected {
-    border-color: var(--color-tertiary);
-    box-shadow: 0 0 0 0.25rem #f1e691;
-    font-weight: bolder;
-    background-color: var(--color-background);
-  }
-
-  &--flip {
-    color: var(--color-black);
-    background-color: var(--color-background);
-    box-shadow: none;
-    font-weight: 400;
-    border: 1px solid rgb(194, 194, 194);
-
-    &:hover {
-      background-color: #f0e27c;
-    }
-  }
-
   &--tertiary {
     color: var(--color-dark);
     background-color: var(--color-tertiary);
@@ -56,4 +37,63 @@
       filter: saturate(1.2) brightness(110%);
     }
   }
+}
+
+.tab {
+  display: inline-block;
+  padding: var(--space-xxs) var(--space-m);
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 2px 2px var(--color-text-header);
+  border-top: 1px solid rgb(194, 194, 194);
+  border-left: 1px solid rgb(194, 194, 194);
+  border-right: 1px solid rgb(194, 194, 194);
+  border-bottom: none;
+
+  &:hover,
+  &:focus,
+  &:focus-within,
+  &:active {
+    transition: all 250ms, color 200ms;
+  }
+
+  &--farmers {
+    // border-color: var(--color-tertiary);
+    // box-shadow: 0 0 0 0.25rem #f1e691;
+    // font-weight: bolder;
+    background-color: var(--color-background);
+    width: 12rem;
+
+    &--selected {
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 0.25rem #5db375;
+      font-weight: bolder;
+    }
+
+    &:hover {
+      background-color: #5db375;
+    }
+  }
+
+  &--contractors {
+    color: var(--color-black);
+    background-color: var(--color-background);
+    box-shadow: none;
+    font-weight: 400;
+    width: 12rem;
+
+    &--selected {
+      border-color: var(--color-tertiary);
+      box-shadow: 0 0 0 0.25rem #f1e691;
+      font-weight: bolder;
+    }
+
+    &:hover {
+      background-color: #f0e27c;
+    }
+  }
+
 }
