--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -145,14 +145,6 @@
   }
 }
 
-.benefits-of-joining {
-  // background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-primary);
-  // width: 100%;
-  // padding-bottom: 4rem;
-  // padding-top: 4rem;
-  // transition: all 0.3s;
-}
-
 .benefits-of-joining__content {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-primary);
   width: 80%;
@@ -161,39 +153,18 @@
   transition: all 0.3s;
 }
 
-.benefits-of-joining-contractors {
+.benefits-of-joining__content.yellow-background,
+.how-it-works__content.yellow-background {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-tertiary);
 }
 
-.category-buttons {
+.category-tabs {
   display: flex;
   align-items: center;
   margin-top: var(--space-xxs);
 
   button:nth-of-type(1) {
     margin-right: var(--space-xxs);
-  }
-}
-
-.toggle {
-
-  background-color: var(--color-background);
-  border-radius: var(--border-radius);
-  border: 1px solid gray;
-  padding: 15px;
-  box-shadow: 4px 2px rgba(0,0,0,0.2);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-
-  .fa-toggle-on, .fa-toggle-off {
-    font-size: 2rem;
-
-  }
-
-  .fa-toggle-off {
-    display: none;
   }
 }
 
@@ -305,12 +276,19 @@
 
 }
 
+.how-it-works__content {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), var(--color-primary);
+  border-radius: var(--border-radius);
+  transition: all 0.3s;
+}
 
 .three-steps {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 2rem;
+
 
   h1 {
     text-decoration: underline;
@@ -325,7 +303,10 @@
 .card {
   text-align: center;
   padding: 20px;
-  width: 20rem;
+  width: 18rem;
+  margin: 1rem;
+  background-color: var(--color-background);
+  border-radius: var(--border-radius);
 }
 
 .card__header {
