--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -106,7 +106,7 @@
       <h2 class="section__title">BENEFITS OF JOINING</h2>
     </div>
 
-    <div class="category-buttons">
+    <div class="category-tabs">
       <button data-category="farmers"
               class="tab tab--farmers tab--farmers--selected"
               data-section-target="farmersButton"
@@ -117,7 +117,7 @@
               data-action="click->section#selectSection">AGRI CONTRACTORS</button>
     </div>
 
-    <div class="benefits-of-joining__content" data-section-target="sectionBackground">
+    <div class="benefits-of-joining__content" data-section-target="benefitsBackground">
       <div id="why-farmers" data-section-target="whyFarmersSection">
         <div class="reasons">
           <div class="reason-card reason-card--farmers">
@@ -211,24 +211,25 @@
     </div>
   </section>
 
-  <section class="how-it-works container why-and-how">
+  <section class="how-it-works why-and-how">
     <div class="how-it-works__header why-and-how-header" id="how-it-works">
       <h2 class="section__title">HOW IT WORKS</h2>
-
-      <div class="category-buttons">
-        <button data-category="farmers"
-                class="tab tab--farmers tab--farmers--selected"
-                data-section-target="farmersButton"
-                data-action="click->section#selectSection">FARMERS</button>
-        <button data-category="contractors"
-                class="tab tab--contractors"
-                data-section-target="contractorsButton"
-                data-action="click->section#selectSection">AGRI CONTRACTORS</button>
-      </div>
     </div>
 
-    <div id="how-farmers" data-section-target="howFarmersSection">
-      <div class="three-steps container">
+    <div class="category-tabs">
+      <button data-category="farmers"
+              class="tab tab--farmers tab--farmers--selected"
+              data-section-target="farmersButton"
+              data-action="click->section#selectSection">FARMERS</button>
+      <button data-category="contractors"
+              class="tab tab--contractors"
+              data-section-target="contractorsButton"
+              data-action="click->section#selectSection">AGRI CONTRACTORS</button>
+    </div>
+
+
+    <div class="how-it-works__content" data-section-target="howItWorksBackground">
+      <div id="how-farmers" class="three-steps" data-section-target="howFarmersSection">
         <div class="card">
           <div class="card__header">
             <div class="card__circle card__circle--green" data-section-target="circle">
@@ -256,7 +257,7 @@
           <div class="card__body">
             <h4>Match made in heaven!</h4>
           <p>
-           Our algorithm matches your task with Agri Contractors & Workers. Review profiles, shortlist candidates, and they'll contact you to discuss details and pricing.
+          Our algorithm matches your task with Agri Contractors & Workers. Review profiles, shortlist candidates, and they'll contact you to discuss details and pricing.
           </p>
           </div>
         </div>
@@ -275,10 +276,8 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="hidden" id="how-contractors" data-section-target="howContractorsSection">
-      <div class="three-steps container">
+      <div id="how-contractors" class="three-steps hidden" data-section-target="howContractorsSection">
         <div class="card">
           <div class="card__header">
             <div class="card__circle card__circle--yellow">
