--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -92,13 +92,11 @@
         <button class="btn btn--primary">JOIN THE WAITING LIST!</button>
       <% end %>
     </div>
-
-    <div class="farm-images">
-      <%= image_tag "farmer.jpg" %>
-      <%= image_tag "tractor_and_grass.jpg" %>
-    </div>
   </div>
 
+  <div class="farm-images">
+    <%= image_tag "farmer_and_tractor.jpg" %>
+  </div>
 
   <section class="benefits-of-joining why-and-how" id="benefits-of-joining">
 
@@ -206,6 +204,10 @@
       <% end %>
     </div>
   </section>
+
+  <div class="farm-images">
+    <%= image_tag "red_tractor.jpg" %>
+  </div>
 
   <section class="how-it-works why-and-how">
     <div class="how-it-works__header why-and-how-header" id="how-it-works">
