change subheaders in How It Works

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -236,7 +236,7 @@
             <h1>Post a task</h1>
           </div>
           <div class="card__body">
-            <h4>Need a task done on your farm?</h4>
+            <h4>Need something done?</h4>
             <p>
               No problem! Just specify your task on our website & give us some basic details of what you need done.
             </p>
@@ -267,7 +267,7 @@
             <h1>Review task</h1>
           </div>
           <div class="card__body">
-            <h4>Reward honest and reliable service</h4>
+            <h4>Reward decent service</h4>
             <p>
               Once the task is complete, you will be asked to rate it. Your feedback helps build a reliable community of Agri Contractor or Farm Workers.
             </p>
@@ -281,7 +281,7 @@
             <div class="card__circle card__circle--yellow">
               <h2>1</h2>
             </div>
-            <h1>Set up a profile</h1>
+            <h1>Create profile</h1>
           </div>
           <div class="card__body">
             <h4>Want more work?</h4>
