change icon color and underline color for Benefits / Farmers tab. Change highlight to yellow

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -69,12 +69,12 @@
 
     &--selected {
       border-color: var(--color-primary);
-      box-shadow: 0 0 0 0.25rem #5db375;
+      box-shadow: 0 0 0 0.25rem var(--color-secondary);
       font-weight: bolder;
     }
 
     &:hover {
-      background-color: #5db375;
+      background-color: var(--color-secondary);
     }
   }
 
