--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -239,11 +239,11 @@
 
 .reason-card--farmers {
   i {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-secondary);
   }
 
   h2 {
-    text-decoration-color: var(--color-secondary);
+    text-decoration-color: var(--color-tertiary);
   }
 }
 
