changed color of button on hover to secondary green

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -24,7 +24,7 @@
     &:hover,
     &:active {
       color: var(--color-white);
-      filter: saturate(1.4) brightness(115%);
+      background-color: var(--color-secondary);
     }
   }
 
