--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -233,7 +233,7 @@
             <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>1</h2>
             </div>
-            <h1>Post a task</h1>
+            <h1 class="underline--yellow">Post a task</h1>
           </div>
           <div class="card__body">
             <h4>Need something done?</h4>
@@ -250,7 +250,7 @@
             <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>2</h2>
             </div>
-            <h1>Get matched</h1>
+            <h1 class="underline--yellow">Get matched</h1>
           </div>
           <div class="card__body">
             <h4>Match made in heaven!</h4>
@@ -264,7 +264,7 @@
             <div class="card__circle card__circle--green" data-section-target="circle">
               <h2>3</h2>
             </div>
-            <h1>Review task</h1>
+            <h1 class="underline--yellow">Review task</h1>
           </div>
           <div class="card__body">
             <h4>Reward decent service</h4>
@@ -281,7 +281,7 @@
             <div class="card__circle card__circle--yellow">
               <h2>1</h2>
             </div>
-            <h1>Create profile</h1>
+            <h1 class="underline--green">Create profile</h1>
           </div>
           <div class="card__body">
             <h4>Want more work?</h4>
@@ -298,7 +298,7 @@
             <div class="card__circle card__circle--yellow">
               <h2>2</h2>
             </div>
-            <h1>Get matched</h1>
+            <h1 class="underline--green">Get matched</h1>
           </div>
           <div class="card__body">
             <h4>Win the task!</h4>
@@ -312,7 +312,7 @@
             <div class="card__circle card__circle--yellow">
               <h2>3</h2>
             </div>
-            <h1>Get reviewed</h1>
+            <h1 class="underline--green">Get reviewed</h1>
           </div>
           <div class="card__body">
             <h4>Build a reputation</h4>
