--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -95,7 +95,7 @@
   </div>
 
   <div class="farm-images">
-    <%= image_tag "farmer_and_tractor.jpg" %>
+    <%= image_tag "silage_1.jpg" %>
   </div>
 
   <section class="benefits-of-joining why-and-how" id="benefits-of-joining">
@@ -119,35 +119,35 @@
       <div id="why-farmers" data-section-target="whyFarmersSection">
         <div class="reasons">
           <div class="reason-card reason-card--farmers">
-            <div>
+            <div class="icon-background">
               <i class="fa-regular fa-thumbs-up"></i>
             </div>
             <h2>Easy to Use</h2>
             <p>Simply post your task on the website & wait for the responses to come in!</p>
           </div>
           <div class="reason-card reason-card--farmers">
-            <div>
+            <div class="icon-background">
               <i class="fa-regular fa-clock"></i>
             </div>
             <h2>Save Time</h2>
             <p>No more ringing around contractors or advertising in classifieds</p>
           </div>
           <div class="reason-card reason-card--farmers">
-            <div>
+            <div class="icon-background">
               <i class="fa-solid fa-piggy-bank"></i>
             </div>
             <h2>Save Money</h2>
             <p>Compare quotes to get competitive pricing & get better value for money</p>
           </div>
           <div class="reason-card reason-card--farmers">
-            <div>
+            <div class="icon-background">
               <i class="fa-regular fa-trash-can"></i>
             </div>
             <h2>No Spam</h2>
             <p>Match with Agri Contractors & Farm Workers interested in your task</p>
           </div>
           <div class="reason-card reason-card--farmers">
-            <div>
+            <div class="icon-background">
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <h2>Peer Reviewed</h2>
@@ -160,35 +160,35 @@
       <div class="hidden" id="why-contractors" data-section-target="whyContractorsSection">
         <div class="reasons">
           <div class="reason-card reason-card--contractors">
-            <div>
+            <div class="icon-background">
               <i class="fa-regular fa-thumbs-up"></i>
             </div>
             <h2>Easy to Use</h2>
             <p>Want the task? Then simply express interest in it on the website </p>
           </div>
           <div class="reason-card reason-card--contractors">
-            <div>
+            <div class="icon-background">
               <i class="fa-regular fa-clock"></i>
             </div>
             <h2>Save Time</h2>
             <p>Our algorithm ensures you're matched with tasks that fit your preferences</p>
           </div>
           <div class="reason-card reason-card--contractors">
-            <div>
+            <div class="icon-background">
               <i class="fa-solid fa-piggy-bank"></i>
             </div>
             <h2>Make Money </h2>
             <p>Get access to more opportunities and increase your income</p>
           </div>
           <div class="reason-card reason-card--contractors">
-            <div>
+            <div class="icon-background">
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <h2>Increased Visibility</h2>
             <p>Get increased recognition and expand your customer base</p>
           </div>
           <div class="reason-card reason-card--contractors">
-            <div>
+            <div class="icon-background">
               <i class="fa-solid fa-medal"></i>
             </div>
             <h2>Build a Reputation </h2>
@@ -206,7 +206,7 @@
   </section>
 
   <div class="farm-images">
-    <%= image_tag "red_tractor.jpg" %>
+    <%= image_tag "silage_2.jpg" %>
   </div>
 
   <section class="how-it-works why-and-how">
