Add media queries to make page responsive

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -23,7 +23,7 @@
   margin-bottom: var(--space-m);
   max-width: 30rem;
 
-  @include media(tabletAndUp) {
+  @include media(md) {
     min-width: 25rem;
   }
 
