--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -9,6 +9,7 @@
   outline: none;
   box-shadow: 2px 2px var(--color-text-header);
   border: 1px solid var(--color-text-header);
+  font-size: var(--font-size-l);
 
   &:hover,
   &:focus,
@@ -41,7 +42,7 @@
 
 .tab {
   display: inline-block;
-  padding: var(--space-xxs) var(--space-m);
+  padding: var(--space-xxs) var(--space-xxs);
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   font-weight: bold;
   text-decoration: none;
@@ -52,6 +53,12 @@
   border-left: 1px solid rgb(194, 194, 194);
   border-right: 1px solid rgb(194, 194, 194);
   border-bottom: none;
+  width: 10.5rem;
+
+  @include media(md) {
+    width: 12rem;
+    padding: var(--space-xxs) var(--space-m);
+  }
 
   &:hover,
   &:focus,
@@ -61,11 +68,7 @@
   }
 
   &--farmers {
-    // border-color: var(--color-tertiary);
-    // box-shadow: 0 0 0 0.25rem #f1e691;
-    // font-weight: bolder;
     background-color: var(--color-background);
-    width: 12rem;
 
     &--selected {
       border-color: var(--color-primary);
@@ -83,7 +86,6 @@
     background-color: var(--color-background);
     box-shadow: none;
     font-weight: 400;
-    width: 12rem;
 
     &--selected {
       border-color: var(--color-tertiary);
