--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,5 +1,21 @@
 @mixin media($query) {
-  @if $query == tabletAndUp {
-    @media (min-width: 50rem) { @content; }
+  @if $query == sm {
+    @media (min-width: 640px) { @content; }
+  }
+
+  @if $query == md {
+    @media (min-width: 768px) { @content; }
+  }
+
+  @if $query == lg {
+    @media (min-width: 1024px) { @content; }
+  }
+
+  @if $query == xl {
+    @media (min-width: 1280px) { @content; }
+  }
+
+  @if $query == xxl {
+    @media (min-width: 1536px) { @content; }
   }
 }
