--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -35,7 +35,7 @@
       margin-bottom: var(--space-xl);
     }
 
-    @include media(lg) {
+    @include media(xxl) {
       font-size: 3rem;
     }
   }
@@ -70,7 +70,7 @@
     font-size: 6rem;
   }
 
-  @include media(lg) {
+  @include media(xxl) {
     font-size: 8rem;
   }
 }
@@ -208,7 +208,7 @@
 }
 
 .why-and-how-header {
-  margin-bottom: var(--space-m);
+  margin-bottom: var(--space-xxxs);
   display: flex;
   flex-direction: column;
   align-items: center;
